# pferdeapfel-rl

./: .gitignore  .pre-commit-config.yaml  README.md  Rules.md  TODO.md  check_decode.py  check_toon_output.py  debug_parser.py  inspect_toon.py  project_plan.md  pyproject.toml
documentation/: Original_German_Rules.md  TODO.md  project_plan.md  rules_en.md  win_condition_bug_analysis.md
scripts/: analyze_rule_difference.py  analyze_win_condition_bug.py  benchmark_ppo.py  compare_rule_versions.py  debug_gameplay.py  debug_heuristic_white.py  debug_mode1_detailed.py  debug_single_game.py  demonstrate_bug.py  eval_2.py  eval_visualisation.py  exhaustive_search.py  find_and_analyze_divergence.py  find_different_outcomes.py  find_rule_difference.py  find_rule_divergence.py  measure_game_length.py  migrate_json_to_toon.py  play_smart.py  plot_training.py  profile_minimax.py  profile_players.py  profile_training.py  run_gui.py  simulate_random.py  test_mode1_fix.py  test_ppo_vs_self.py  test_win_condition_fix.py  tune_heuristic_v4.py
src/: __init__.py
src/debug/: debug_env.py
src/env/: __init__.py  knight_self_play_env.py  pferdeapfel_env.py
src/evaluation/: __init__.py  discovery.py  eval_script.py  profiler.py  ranking.py  results.csv  runner.py  storage.py
src/game/: __init__.py  board.py  game.py  rules.py
src/gui/: __init__.py  config.json  dashboard.py  main.py
src/players/: __init__.py  base.py  greedy.py  heuristic_player.py  human.py  mcts.py  minimax.py  random.py
src/players/rl/: __init__.py  dqn_rl.py  ppo_player.py  ppo_rl.py
src/training/: __init__.py  benchmark_envs.py  config.yaml  ppo_train.py  tb_summary.py  train_ppo.py  train_ppo_self_play.py  wrappers.py
src/utils/: debug_util.py  toon_parser.py
tests/: __init__.py  stress_test.py  test_action_mask.py  test_env_sanity.py  test_legal_moves.py  test_mcts_player.py  test_modes.py  test_new_rules.py  test_rl_io.py  test_win_conditions.py
