[project]
name = "pferdeapfel-rl"
version = "0.1.0"
description = "Pferdeäpfel game with RL training using Stable Baselines3"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gui = "scripts.run_gui:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true
