[project]
name = "pferdeapfel-rl"
version = "0.1.0"
description = "Pferdeäpfel game with RL training using Stable Baselines3"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "PySide6>=6.5.0",
    "toon-python>=0.1.2",
    "gymnasium>=0.29.0",
    "shimmy>=1.3.0",
    "stable-baselines3[extra]>=2.3.0",
    "sb3-contrib>=2.3.0",
    "torch>=2.2.0",
    "tensorboard>=2.14.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "polars>=0.20.0",
    "optuna>=3.6.0",
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "PySide6-stubs>=6.5.0",
]

[project.scripts]
gui = "scripts.run_gui:main"
train-ppo = "src.training.ppo_train:main"
eval-rl = "src.evaluation.eval_script:main"
dashboard = "src.gui.dashboard:plot_win_rates"
tb-summary = "src.training.tb_summary:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: import sorting
exclude = ["venv", ".venv", "build", "dist"]
